--- a/package.json
+++ b/package.json
@@ -11,32 +11,38 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^7.2.11",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/core": "^7.2.11",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "angular2-image-upload": "^1.0.0-rc.2",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "ng-simple-slideshow": "^1.2.9",
     "npm": "^6.8.0",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.3",
-    "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular-devkit/build-angular": "^0.13.7",
+    "@angular/cli": "^7.3.7",
+    "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "angular2-slideshow": "^3.0.1",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
